fix intercom overlapping account menu

--- a/client/assets/styles/scss/components/external/intercom.scss
+++ b/client/assets/styles/scss/components/external/intercom.scss
@@ -103,6 +103,14 @@
       margin-left: 0;
     }
   }
+
+  .popover-account-menu {
+    margin-left: $intercom-width + 10px;
+
+    @include media(md) {
+      margin-left: 10px;
+    }
+  }
 }
 
 // for "preview" messages
